--- a/Lab3-MueblesDeLosAlpes-war/web/menu.xhtml
+++ b/Lab3-MueblesDeLosAlpes-war/web/menu.xhtml
@@ -14,14 +14,14 @@
     <ui:define name="body">
 
         <h:outputText id="linkHeader"
-                                    value="Administración del sistema" style="color:white"/>
+                      value="Administración del sistema" style="color:white"/>
 
         <div align="right">
             <h:panelGroup>
                 <h:form>
                     <h:commandButton  action="#{loginBean.logout}"  style="background: transparent;
-                                        padding-right: 12px" image="./resources/img/pag/logOff.png"
-                                        title="Cerrar sesión"/>
+                                      padding-right: 12px" image="./resources/img/pag/logOff.png"
+                                      title="Cerrar sesión"/>
                 </h:form>
             </h:panelGroup>
         </div>
@@ -34,23 +34,29 @@
                             <td width="180">
 
                                 <h:commandButton style="background: transparent"
-                                                   image="./resources/img/pag/vendedores.png"
-                                                   title="Vendedores"
-                                                   action="vendedores.jsf"/>
+                                                 image="./resources/img/pag/vendedores.png"
+                                                 title="Vendedores"
+                                                 action="vendedores.jsf"/>
                             </td>
                             <td width="180">
 
                                 <h:commandButton style="background: transparent"
-                                                   image="./resources/img/pag/muebles.png"
-                                                   title="Muebles"
-                                                   action="catalogo.jsf"/>
-                                                   
+                                                 image="./resources/img/pag/muebles.png"
+                                                 title="Muebles"
+                                                 action="catalogo.jsf"/>
+
                             </td>
                             <td width="180">
                                 <h:commandButton style="background: transparent"
-                                                   image="./resources/img/pag/clientes.png"
-                                                   title="Clientes"
-                                                   action="clientes.jsf"/>
+                                                 image="./resources/img/pag/clientes.png"
+                                                 title="Clientes"
+                                                 action="clientes.jsf"/>
+                            </td>
+                            <td width="180">
+                                <h:commandButton style="background: transparent"
+                                                 image="./resources/img/pag/ventas.png"
+                                                 title="Ventas"
+                                                 action="ventas-totales.jsf"/>
                             </td>
                         </tr>
                     </table>
